--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <!-- Логотип -->
     <div class="logo">SEPHORA</div>
     <!-- Банери -->
+    <div class ="banner">
     <img class="first" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b30077f0b.jpg">
     <img class="sec" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b3e35ee30.png">
     <img class="tr" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4ad1089d.png">
     <img class="f" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4fcac119.png">
+    </div>
     <!-- Товари -->
     <div class="section">
         <h2>Toвари</h2>
