--- a/index.html
+++ b/index.html
@@ -12,43 +12,43 @@
 <body>
     <!-- Верхнє меню -->
     <div class="top-bar">
-        <a href="#">New</a>
-        <a href="#">Brands</a>
-        <a href="#">Makeup</a>
-        <a href="#">skincare</a>
-        <a href="#">Fragrance</a>
-        <a href="#">Tools & Brashes</a>
-        <a href="#">Hair</a>
-        <a href="#">Bath&Body</a>
-        <a href="#">Mini size</a>
-        <a href="#">Beauty under 20$</a>
-        <a href="#">Gifts & Gift cards</a>
-        <a href="#">Sale & Offers</a>
+        <a href="https://www.sephora.com/beauty/new-beauty-products">New</a>
+        <a href="https://www.sephora.com/shop/makeup-cosmetics">Brands</a>
+        <a href="https://www.sephora.com/shop/makeup-cosmetics">Makeup</a>
+        <a href="https://www.sephora.com/shop/skincare">skincare</a>
+        <a href="https://www.sephora.com/shop/fragrance">Fragrance</a>
+        <a href="https://www.sephora.com/shop/makeup-tools">Tools & Brashes</a>
+        <a href="https://www.sephora.com/shop/hair-products">Hair</a>
+        <a href="https://www.sephora.com/shop/bath-body">Bath&Body</a>
+        <a href="https://www.sephora.com/shop/travel-size-toiletries">Mini size</a>
+        <a href="https://www.sephora.com/brand/sephora-collection?pl=0&ph=20">Beauty under 20$</a>
+        <a href="https://www.sephora.com/shop/gifts">Gifts & Gift cards</a>
+        <a href="https://www.sephora.com/sale">Sale & Offers</a>
     </div>
     <!-- Логотип -->
     <div class="logo">SEPHORA</div>
     <!-- Банери -->
     <div class ="banner">
-    <img class="first" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b30077f0b.jpg">
-    <img class="sec" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b3e35ee30.png">
-    <img class="tr" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4ad1089d.png">
-    <img class="f" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4fcac119.png">
+    <a href=""><img class="first" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b30077f0b.jpg"></a>
+    <a href=""><img class="sec" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b3e35ee30.png"></a>
+    <a href=""><img class="tr" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4ad1089d.png"></a>
+    <a href =""><img class="f" src="https://learn.logikaschool.com/uploads/student/4639666/68b2b4fcac119.png"></a>
     </div>
     <!-- Товари -->
     <div class="section">
         <h2>Toвари</h2>
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dccf7bfb1.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dd24d7322.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dd99bd00d.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5ddcc7a559.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5de3d9c9c0.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5de7838895.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dedf2b168.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df19c36b3.png">
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df488d9ac.png">
+        <a href="https://www.sephora.com/product/spaliday-scalp-scrub-and-hair-mask-gift-set-P518103?skuId=2909091&icid2=products%20grid:p518103:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dccf7bfb1.png"></a>
+        <a href="https://www.sephora.com/product/gleamy-dreamy-makeup-value-set-P518210?skuId=2887644&icid2=products%20grid:p518210:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dd24d7322.png"></a>
+        <a href="https://www.sephora.com/product/mini-rare-eau-de-parfum-set-P517167?skuId=2888519&icid2=products%20grid:p517167:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dd99bd00d.png"></a>
+        <a href="https://www.sephora.com/product/sol-de-janeiro-bum-bum-summer-25-set-le-P518741?skuId=2888105&icid2=products%20grid:p518741:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5ddcc7a559.png"></a>
+        <a href="https://www.sephora.com/product/laneige-dream-skin-trio-sleeping-masks-set-P518867?skuId=2905289&icid2=products%20grid:p518867:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5de3d9c9c0.png"></a>
+        <a href="https://www.sephora.com/product/tarte-lip-icons-maracuja-juicy-lip-liner-du-P517873?skuId=2883577&icid2=products%20grid:p517873:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5de7838895.png"></a>
+        <a href="https://www.sephora.com/product/dolce-gabbana-mini-light-blue-eau-de-toilette-set-P512505?skuId=2863470&icid2=products%20grid:p512505:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5dedf2b168.png"></a>
+        <a href="https://www.sephora.com/product/better-skin-starts-here-kit-for-dehydrated-skin-P507869?skuId=2702876&icid2=products%20grid:p507869:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df19c36b3.png"></a>
+        <a href="https://www.sephora.com/product/vinopure-discovery-set-P517646?skuId=2883122&icid2=products%20grid:p517646:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df488d9ac.png"></a>
 
-        <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df80176ed.png">
-        <img class ="new" src="https://learn.logikaschool.com/uploads/student/4639666/68b5dfe9696d3.png">
+        <a href="https://www.sephora.com/product/gogo-shimmer-stick-P517334?skuId=2892883&icid2=products%20grid:p517334:product"><img src="https://learn.logikaschool.com/uploads/student/4639666/68b5df80176ed.png"></a>
+        <a href="https://www.sephora.com/brand/rhode-hailey-bieber"><img class ="new" src="https://learn.logikaschool.com/uploads/student/4639666/68b5dfe9696d3.png"></a>
 
     </div>
     <!-- Товари -->
@@ -58,11 +58,11 @@
         <h2>Відгуки</h2>
         <div class="review">
             <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5e04135aec.png" alt="user">
-            <p>Відгук користувача про товар...</p>
+            <p>Замовляю тут вже 3 роки, все завжди супер якісно. Класно що тут величезний вибір і ти завжди знайдеш те що тобі підходить і навіть коли ти заходиш просто подивитись новинки, то ти всеодно щось купиш.</p>
         </div>
         <div class="review">
             <img src="https://learn.logikaschool.com/uploads/student/4639666/68b5e076741d6.png" alt="user">
-            <p>Ще один відгук користувача...</p>
+            <p>Замовляв дівчині косметику, вона дуже задоволена. А я не задоволений бо вона просить ще більше косметики з цього магазину, але я не можу їй купити, бо в мене нема дєнєг.</p>
         </div>
     </div>
 
@@ -78,20 +78,20 @@
     <!-- Футер -->
     <footer>
         <div class="footer"><br><br>
-            <a href="">About Sephora</a>
-            <a href="">My Sephora</a>
-            <a href="">Help</a>
+            <a href="https://www.inside-sephora.com/en/about-sephora">About Sephora</a>
+            <a href="https://www.sephora.com/BeautyInsider">My Sephora</a>
+            <a href="https://www.sephora.com/beauty/customer-service">Help</a>
             <a href="">Region & Language</a>
         </div>
         <div class="footer_2">
             <article><br><br><br>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/instagram-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/facebook-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/x-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/youtube-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/pinterest-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/snapchat-ko.svg"></a>
-                <a href=""><img src="https://www.sephora.com/img/ufe/icons/tiktok-ko.svg"></a>
+                <a href="https://www.instagram.com/sephora"><img src="https://www.sephora.com/img/ufe/icons/instagram-ko.svg"></a>
+                <a href="https://www.facebook.com/sephora"><img src="https://www.sephora.com/img/ufe/icons/facebook-ko.svg"></a>
+                <a href="https://x.com/sephora"><img src="https://www.sephora.com/img/ufe/icons/x-ko.svg"></a>
+                <a href="https://www.youtube.com/user/sephora/tutorials"><img src="https://www.sephora.com/img/ufe/icons/youtube-ko.svg"></a>
+                <a href="https://se.pinterest.com/sephora/"><img src="https://www.sephora.com/img/ufe/icons/pinterest-ko.svg"></a>
+                <a href="https://www.snapchat.com/@sephora"><img src="https://www.sephora.com/img/ufe/icons/snapchat-ko.svg"></a>
+                <a href="https://www.tiktok.com/@sephora"><img src="https://www.sephora.com/img/ufe/icons/tiktok-ko.svg"></a>
             </article>
             <article>
                 <br><br> © 2025 SEPHORA. Усі права захищені.<br><br>
